layout with header bar, logo and nav bar, images (not arranged), and footer

--- a/index.html
+++ b/index.html
@@ -12,9 +12,53 @@
 <body>
   <main class="outer-box">
     <header>KELLY BRICKNER IS NOW KELLY LYON</header>
-    <nav></nav>
-    <article></article>
-    <footer></footer>
+    <nav>
+      <div>
+        <div class="logo">
+          <span id="logo-1">Kelly</span>
+          <span id="logo-2">Lyon</span>
+          <span id="logo-3">Editor</span>
+        </div>
+      </div>
+      <div class="nav-bar">
+        <div class="nav-elem">work +</div>
+        <div class="nav-elem">about</div>
+        <div class="nav-elem">imdb</div>
+        <div class="nav-elem">press</div>
+        <div class="nav-elem">contact</div>
+      </div>
+    </nav>
+    <article>
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+      <img src="https://www.fillmurray.com/" alt="bill murray">
+
+    </article>
+    <footer>
+      <img src="https://www.citypng.com/public/uploads/preview/-51613572767cozydzabu1.png" alt="twitter logo">
+      <img
+        src="https://e7.pngegg.com/pngimages/322/394/png-clipart-logo-computer-icons-instagram-logo-miscellaneous-smile.png"
+        alt="instagram logo">
+      <img src="https://toppng.com/uploads/preview/facebook-f-icon-facebook-logo-png-white-11563016108d1db9g68rk.png"
+        alt="facebook logo">
+    </footer>
   </main>
 </body>
 
