complete the layout with logo, correct fonts, image placement

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     <nav>
       <div>
         <div class="logo">
-          <span id="logo-1">Kelly</span>
+          <img
+            src="http://images.squarespace-cdn.com/content/v1/55e23ee4e4b0eaca5beb3129/1440898264945-585A851Y4XAX04YH7Q9J/KL_logo.png"
+            alt="Kelly Lyon editor logo">
+          <!-- <span id="logo-1">Kelly</span>
           <span id="logo-2">Lyon</span>
-          <span id="logo-3">Editor</span>
+          <span id="logo-3">Editor</span> -->
         </div>
       </div>
       <div class="nav-bar">
@@ -29,27 +32,43 @@
       </div>
     </nav>
     <article>
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-      <img src="https://www.fillmurray.com/" alt="bill murray">
-
+      <div></div>
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <div></div>
+      <div></div>
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <div></div>
+      <div></div>
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <div></div>
+      <div></div>
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <div></div>
+      <div></div>
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
+      <img src="https://www.fillmurray.com/320/180" alt="bill murray">
     </article>
     <footer>
       <img src="https://www.citypng.com/public/uploads/preview/-51613572767cozydzabu1.png" alt="twitter logo">
