add contact link, refactor social media with image container

--- a/index.html
+++ b/index.html
@@ -71,12 +71,17 @@
       <img src="https://www.fillmurray.com/320/180" alt="bill murray">
     </article>
     <footer>
-      <img src="https://www.citypng.com/public/uploads/preview/-51613572767cozydzabu1.png" alt="twitter logo">
-      <img
-        src="https://e7.pngegg.com/pngimages/322/394/png-clipart-logo-computer-icons-instagram-logo-miscellaneous-smile.png"
-        alt="instagram logo">
-      <img src="https://toppng.com/uploads/preview/facebook-f-icon-facebook-logo-png-white-11563016108d1db9g68rk.png"
-        alt="facebook logo">
+      <div class="contact">
+        <span>Contact <a href=https://www.google.com/">Kelly@KellyLyonEdit.com</a></span>
+      </div>
+      <div class="image-container">
+        <img src="https://www.citypng.com/public/uploads/preview/-51613572767cozydzabu1.png" alt="twitter logo">
+        <img
+          src="https://e7.pngegg.com/pngimages/322/394/png-clipart-logo-computer-icons-instagram-logo-miscellaneous-smile.png"
+          alt="instagram logo">
+        <img src="https://toppng.com/uploads/preview/facebook-f-icon-facebook-logo-png-white-11563016108d1db9g68rk.png"
+          alt="facebook logo">
+      </div>
     </footer>
   </main>
 </body>
